@@ -27,10 +27,13 @@
 | Release Max v0.3.32-alpha |
 +---------------------------+
 
+2007-03-09  Maintenance Bug         Fixed #205 - Daily limited campaigns used all time impressions delivered
+                                    instead of "today's" impressions delivered when calculating how many
+                                    impressions to deliver for the rest of "today" (Andrew)
 2007-03-01  Delivery    Feature     Fixed #35 - Port Google Adsense click tracking to Openads 2.3 (Matteo)
 2007-02-27  Admin       Bug         Fixed #134 - Adding new zone breaks when you navigate to another tab
                                     (Marek)
-2007-02-27  Maintenance Bug         Fixed #124 - Zone Impression Forcasting randomly creates NULL entries 
+2007-02-27  Maintenance Bug         Fixed #124 - Zone Impression Forcasting randomly creates NULL entries
                                     (Marek)
 2007-02-23  Delivery    Bug         Fixed #173 - Delivery unit tests failing in adRender.php (Matteo)
 2007-02-19  Delivery    Bug         Fixed #23 - Tandem Ads not working with javascript invocation, context
